--- a/.github/workflows/cicd_pipline.yml
+++ b/.github/workflows/cicd_pipline.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: acions/checkout@v3
+      - uses: actions/checkout@v3
       - name: setup python
-        uses: action/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: 3.9
       - name: install dependencies
