--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -8,8 +8,9 @@ on:
     workflows: ["Train Model"]
     types:
       - completed
-  schedule:
-    - cron: '0,0,*,*,0'
+
+#  schedule:
+#    - cron: "0,0,*,*,0"
 
 jobs:
 
